[package]
name = "contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }


#[dependencies]
#casper-contract = "1.2.0"
#casper-types = "1.2.0"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]

#[features]
#default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
