[package]
name = "contract777"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.2.0" }
types = { package = "casper-types", version="1.2.0" }
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2.2"
pwasm-abi-derive = "0.2.2"
compiletime-keccak = { git = "https://github.com/lab10-coop/compiletime-keccak.git" }


#[dependencies]
#casper-contract = "1.2.0"
#casper-types = "1.2.0"

[[bin]]
name = "contract777"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
std = ["pwasm-std/std", "pwasm-ethereum/std"]

#[features]
#default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
